--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "@nestjs/platform-express": "^8.2.4",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/terminus": "^8.0.3",
+    "@nestjs/typeorm": "^8.0.3",
     "husky": "^7.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/testing": "^8.4.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
