--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/terminus": "^8.0.3",
     "@nestjs/typeorm": "^8.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "husky": "^7.0.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
