--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -22,7 +22,9 @@
     "prepare": "husky install",
     "typeorm:cli": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli -f ./src/ormconfig.ts",
     "m:create": "npm run typeorm:cli migration:create -- -n",
-    "m:run": "npm run typeorm:cli migration:run"
+    "m:run": "npm run typeorm:cli migration:run",
+    "lint-staged": "lint-staged"
+
   },
   "dependencies": {
     "@nestjs/common": "^8.2.4",
@@ -37,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "husky": "^7.0.4",
+    "lint-staged": "^13.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -50,14 +53,14 @@
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^8.4.0",
+    "@nestjs/testing": "^8.4.7",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.10",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "cz-lean-changelog": "^0.0.2",
@@ -65,10 +68,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
+    "supertest": "^6.2.4",
+    "ts-jest": "^26.5.6",
     "ts-loader": "^8.0.18",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^3.9.0",
